--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
     background-color: whitesmoke;
 }
 
+.bg-sticky {
+    background-color: rgba(245, 245, 245, 0.95);
+}
+
 .custom-green {
     color: #1df2a1;
 }
