--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
 }
 
 .bg-sticky {
-    background-color: rgba(245, 245, 245, 0.95);
+    background-color: rgba(245, 245, 245, 0.9);
+    backdrop-filter: blur(5px);
 }
 
 .custom-green {
